@@ -50,6 +50,8 @@ class StatusControllerTest < ActionDispatch::IntegrationTest
   def test_workerstatus
     get "/status/workerstatus"
     assert_response :success
+    # just the publisher is running in the background during test suite run
+    assert_xml_tag(:tag => "daemon", :attributes => {:type => 'publisher', :state => 'running'})
   end
 
   def test_project_status
