@@ -32,7 +32,8 @@ Regressions:
 Changes on purpose:
 ===================
 
- * 
+ * The scheduler states in /build/_workerstates got moved into a 
+   partition structure to support multiple backends running in one instance.
 
 Features
 ========
